# config-joiner-json

./: LICENSE  README.md  config-joiner-json.cabal
data/example/: README.md  common.json
data/example/src/: config1.json  config2.json  config3.json
lib/Config/: JSON.hs
lib/Config/JSON/: Bytes.hs  Decode.hs  IO.hs  Join.hs  Types.hs
src/: Main.hs
src/Config/JSON/Options/: Parse.hs
tests/: TestSuite.hs
tests/Config/JSON/: TestTypes.hs
tests/Config/JSON/Types/: Tests.hs
