name:                config-joiner-json
version:             0.0.1.0
synopsis:            A library and binary for managing multiple JSON config files.
-- description:  
homepage:            https://github.com/jhmcstanton/config-joiner-json#readme
license:             BSD3
license-file:        LICENSE
author:              Jim McStanton
maintainer:          jim@jhmcstanton.com
copyright:           2018 Jim McStanton
category:
         Configuration,
         JSON 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    ghc-options:       -Wall
    hs-source-dirs:    lib
    default-language:  Haskell2010

    exposed-modules:
      Config.JSON.Join
      Config.JSON.IO
      Config.JSON.Types

    build-depends:
        aeson,
        base >= 4.7 && < 5,
        bytestring,
        hashable,
        unordered-containers
                     
executable config-joiner-json
    hs-source-dirs:      src
    ghc-options:         -Wall
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        aeson,
        unordered-containers
