name:                config-joiner-json
version:             0.0.1.0
synopsis:            A library and binary for managing multiple JSON config files.
-- description:  
homepage:            https://github.com/jhmcstanton/config-joiner-json#readme
license:             BSD3
license-file:        LICENSE
author:              Jim McStanton
maintainer:          jim@jhmcstanton.com
copyright:           2018 Jim McStanton
category:
         Configuration,
         JSON 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    ghc-options:       -Wall -Werror
    hs-source-dirs:    lib
    default-language:  Haskell2010

    exposed-modules:
      Config.JSON
      Config.JSON.Bytes
      Config.JSON.Join
      Config.JSON.IO
      Config.JSON.Types

    build-depends:
        aeson,
        base >= 4.7 && < 5,
        bytestring,
        hashable,
        unordered-containers

    default-extensions:
        NoImplicitPrelude 
                     
executable config-joiner-json
    hs-source-dirs:      src
    ghc-options:         -Wall -Werror
    main-is:             Main.hs
    default-language:    Haskell2010
    
    build-depends:
        base >= 4.7 && < 5,
        config-joiner-json,
        directory, 
        filepath,
        optparse-applicative

    other-modules:
        Config.JSON.Options.Parse

    default-extensions:
        NoImplicitPrelude

test-suite test-config-joiner-json
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests 
    main-is:             TestSuite.hs
    ghc-options:         -Wall -Werror -threaded
    default-language:    Haskell2010

    other-modules:
        Config.JSON.TestTypes
        Config.JSON.Types.Tests

    build-depends:
        base,
        bytestring,
        config-joiner-json,
        tasty,
        tasty-hunit, 
        unordered-containers

    default-extensions:
        NoImplicitPrelude
